# agent-swarm

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  repo-metadata.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: agent_swarm_dashboard.html  agents.json  aggressive_cli_swarm_benchmark.json  aggressive_dashboard.html  aggressive_feature_benchmark.json  blender_coin.py  coffee_coin.blend  coffee_coin.glb  coffee_website_animation.html  custom_swarm.py  feature_benchmark_dashboard.html  figma_coffee_animation_spec.json  full_swarm_feature_benchmark.json  full_swarm_plus_opus_benchmark.json  opus_48_vs_47_benchmark.json  qwen_swarm_benchmark.json  swarm_visualizer.html  v3_aggressive_feature_benchmark.json  v4_final_dashboard.html  v4_final_feature_benchmark.json  v5_final_dashboard.html  v5_final_feature_benchmark.json  v6_aggressive_feature_benchmark.json  v6_live_dashboard.html  v7_aggressive_feature_benchmark.json
scripts/: opencode-mistral.ps1  opencode-qwen.ps1  render_live_demo_video.py  run_aggressive_cli_benchmark.py
swarm/: config.py
swarm/agents/: catalog.py
swarm/core/: advanced_capabilities.py  agent.py  context.py  environment_support.py  master_review.py  mcp_marketplace.py  media_apps.py  orchestrator.py  performance_benchmark.py  preflight_review.py  provider_assignment.py  skill_runtime.py  workflow_plans.py
swarm/providers/: azure.py  base.py  factory.py  media.py  openai.py  openai_compatible.py  openrouter.py  parallel.py
swarm/skills/: models.py
swarm/switcher/: bridge.py  (+1 more)
tests/: test_advanced_capabilities.py  test_agent_catalog.py  test_aggressive_cli_benchmark.py  test_azure_provider.py  test_integration.py  test_media_apps_skill_environment.py  test_media_generation.py  test_performance_benchmark.py  test_preflight_review.py  test_provider_assignment.py  test_vision_and_workflow_planners.py
(+4 files in other folders)
